--- a/editor/templates/pick_images.html
+++ b/editor/templates/pick_images.html
@@ -6,10 +6,13 @@
 	<body>
 		<h1> Pick Images </h1>
         <p> Please select an image for each sentence: </p>
-		{% for sentence in sentences %}
-			<p>{{sentence.text}}</p>
-		{% endfor %}
 
+		<form action="{% url 'view_page' %}" method="post">
+				{% csrf_token %}
+				{% for form in sentence_forms %}
+					{{ form.as_p }}
+				{% endfor %}
+				<input type="submit" value="Submit">
 		<p><a href='{%url 'home' %}'>Back to home</a></p>
 	</body>
 </html>
