refactor: Apply bootstrapping partial template to all pages

--- a/editor/templates/home.html
+++ b/editor/templates/home.html
@@ -2,5 +2,5 @@
 {% block body %}
 	<h1> Dashboard </h1>
 	<p><a href='{%url 'create' %}'>Create Content</a></p>
-	<p><a href='{%url 'browse' %}'>View Content</a></p>
+	<p><a href='{%url 'browse' %}'>Browse Content</a></p>
 {% endblock %}
