--- a/editor/templates/browse.html
+++ b/editor/templates/browse.html
@@ -1,10 +1,6 @@
-<html>
-	<head>
-		<title> Browse Content </title>
-	</head>
-	<body>
-		<h1> Browse Content </h1>
-        <p> Created pages: </p>
-		<p><a href='{%url 'home' %}'>Back to home</a></p>
-	</body>
-</html>
+{% extends 'partials/base.html' %}
+{% block body %}
+	<h1> Browse Content </h1>
+	<p> Created pages: </p>
+	<p><a href='{%url 'home' %}'>Back to home</a></p>
+{% endblock %}
