--- a/editor/templates/pick_images.html
+++ b/editor/templates/pick_images.html
@@ -1,18 +1,13 @@
+{% extends 'partials/base.html' %}
+{% block body %}
+	<h1> Pick Images </h1>
+	<p> Please select an image for each sentence: </p>
 
-<html>
-	<head>
-		<title> Pick Images </title>
-	</head>
-	<body>
-		<h1> Pick Images </h1>
-        <p> Please select an image for each sentence: </p>
-
-		<form action="{% url 'pick_images' set.id %}" method="post">
-				{% csrf_token %}
-				{% for form in sentence_forms %}
-					{{ form.as_p }}
-				{% endfor %}
-				<input type="submit" value="Submit">
-		<p><a href='{%url 'home' %}'>Back to home</a></p>
-	</body>
-</html>
+	<form action="{% url 'pick_images' set.id %}" method="post">
+			{% csrf_token %}
+			{% for form in sentence_forms %}
+				{{ form.as_p }}
+			{% endfor %}
+			<input type="submit" value="Submit">
+	<p><a href='{%url 'home' %}'>Back to home</a></p>
+{% endblock %}
