--- a/editor/templates/view_page.html
+++ b/editor/templates/view_page.html
@@ -1,12 +1,8 @@
-<html>
-	<head>
-		<title> View Page </title>
-	</head>
-	<body>
-		<h1> View Page </h1>
-		{% for sentence in sentences %}
-		<p> {{ sentence.text }} </p>
-		{% endfor %}
-		<p><a href='{%url 'home' %}'>Back to home</a></p>
-	</body>
-</html>
+{% extends 'partials/base.html' %}
+{% block body %}
+	<h1> View Page </h1>
+	{% for sentence in sentences %}
+	<p> {{ sentence.text }} </p>
+	{% endfor %}
+	<p><a href='{%url 'home' %}'>Back to home</a></p>
+{% endblock %}
