--- a/editor/templates/browse.html
+++ b/editor/templates/browse.html
@@ -2,5 +2,16 @@
 {% block body %}
 	<h1> Browse Content </h1>
 	<p> Created pages: </p>
+	{% if sets %}
+		<ol>
+		{% for set in sets %}
+			<li>
+			<a href='{%url 'view_page' set.id %}'>Some title here</a>
+			</li>
+		{% endfor %}
+		</ol>
+	{% else %}
+		<p> There are currently no created sets </p>
+	{% endif %}
 	<p><a href='{%url 'home' %}'>Back to home</a></p>
 {% endblock %}
