--- a/editor/templates/create.html
+++ b/editor/templates/create.html
@@ -1,10 +1,16 @@
 {% extends 'partials/base.html' %}
 {% block body %}
+<div class="container">
 	<h1> Create Content </h1>
 	<p> Please enter a paragraph here: </p>
-	<form action="{% url 'create' %}" method="post">
-			{% csrf_token %}
-			{{ form.as_p }}
-			<input type="submit" value="Submit">
-	<p><a href='{%url 'home' %}'>Back to home</a></p>
+	<div class="row">
+		<div>
+			<form action="{% url 'create' %}" method="post">
+					{% csrf_token %}
+					{{ form.as_p }}
+					<input type="submit" class="btn btn-secondary" value="Submit">
+			<p><a href='{%url 'home' %}' class="btn btn-secondary">Back to home</a></p>
+		</div>
+	</div>
+</div>
 {% endblock %}
