--- a/editor/templates/view_page.html
+++ b/editor/templates/view_page.html
@@ -1,8 +1,22 @@
 {% extends 'partials/base.html' %}
 {% block body %}
+<div class="container">
 	<h1> View Page </h1>
-	{% for sentence in sentences %}
-	<p> {{ sentence.text }} </p>
-	{% endfor %}
+	<div class="row justify-content-center">
+		<div class="col-6">
+			{% for sentence in sentences %}
+
+			<!-- Putting each set into a separate card -->
+			<div class="card">
+				<div class="text-center">
+					<div class="col">
+						<p> {{ sentence.text }} </p>
+					</div>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+	</div>
 	<p><a href='{%url 'home' %}'>Back to home</a></p>
+</div>
 {% endblock %}
