--- a/editor/templates/view_page.html
+++ b/editor/templates/view_page.html
@@ -11,7 +11,8 @@
 			<div class="card">
 				<div class="text-center">
 					<div class="col">
-						<p> {{ sentence.text }} </p>
+						<h4> {{ sentence.text }} </h4>
+						<p><img src={{ sentence.image_url }}/></p>
 						<audio
 							src="{% say 'en-us' sentence.text %}"
 							controls
@@ -22,6 +23,6 @@
 			{% endfor %}
 		</div>
 	</div>
-	<p><a href='{%url 'home' %}'>Back to home</a></p>
+	<p><a href='{%url 'home' %}' class="btn btn-secondary">Back to home</a></p>
 </div>
 {% endblock %}
