add: Added placeholder images to sentence creation
Edit views to generate placeholder images and save them to the model
Modify views to return tuples of forms and their images
Edit template to show images beneath form

--- a/editor/templates/pick_images.html
+++ b/editor/templates/pick_images.html
@@ -7,8 +7,13 @@
 	<form action="{% url 'pick_images' set.id %}" method="post">
 			{% csrf_token %}
 			<ol>
-			{% for form in sentence_forms %}
+
+			{% for form, images in data_zip %}
 				<li>{{ form.as_p }}</li>
+				
+				{% for image in images %}
+					<img src={{ image }}/>
+				{% endfor %}
 			{% endfor %}
 			</ol>
 			<input type="submit" class="btn btn-secondary" value="Submit">
