--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,28 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue", Arial,
+     sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #333;
+}
+
+text-white {
+  color: #ffffff;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  color: #ffffff;
+  text-shadow: 0.5px 0.5px 0.5px black;
+}
+
+.btn {
+  margin: 3px;
+}
+
+img {
+  margin: 2px;
+  width: 100%;
 }
 
 code {
