--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,18 @@ img {
   width: 100%;
 }
 
+.set{
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 25px;
+  /*
+  Alternative border method
+  border: 2px solid #252525;
+  */
+  background-color: #252525;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
