--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,22 @@ p, h1, h2, h3, h4, h5, h6 {
   text-shadow: 0.5px 0.5px 0.5px black;
 }
 
+p {
+  font-size: 1.5em;
+}
+
 .btn {
   margin: 3px;
+}
+
+.card{
+  text-align: left;
+  background-color: #252525;
+  /*
+  background-color: #333;
+  border: 4px solid #252525;
+  */
+  margin: 10px;
 }
 
 img {
