--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,11 @@ text-white {
   color: #ffffff;
 }
 
+.error-heading {
+  font-size: 5em;
+  text-shadow: 1.5px 1.5px 1.5px black;
+}
+
 p, h1, h2, h3, h4, h5, h6 {
   color: #ffffff;
   text-shadow: 0.5px 0.5px 0.5px black;
